PMO-709: created a new CLI for running simulations